# cachepilot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: chat_latency.yaml  memory_pressure.yaml  mixed_spike.yaml
docs/: architecture.md  perc_proof.md  roofline_proofs.md
rust/tokenizer/: Cargo.toml
rust/tokenizer/src/: main.rs
scripts/: compare_vs_baselines.py  plot_results.py  run_bench.py
src/cachepilot/: __init__.py  batcher.py  cli.py  cost_model.py  dataset_profile.py  engine.py  eviction.py  gpu_budget.py  grafana.py  kv_manager.py  memory.py  model_compare.py  placement.py  quantization.py  real_workloads.py  scheduler.py  scorecard.py  simulator.py  telemetry.py  telemetry_export.py  tokenizer.py  vllm_benchmark.py
src/cachepilot/kernels/: kv_block_copy.py  kv_quantize.py
src/cachepilot/policy/: rl_eviction.py  rl_policy.py
src/cachepilot/vllm_patch/: perc_evictor.py
src/cuda/: kv_block_copy.cu  kv_quant.cu  native_info.cu  pybind_module.cpp
tests/: test_dataset_profile.py  test_engine.py  test_eviction.py  test_kernels.py  test_kv_manager.py  test_memory.py  test_placement.py  test_quantization.py  test_rl_policy.py  test_scorecard.py  test_telemetry_export.py  test_tokenizer.py  test_vllm_benchmark.py  test_vllm_integration.py
